Active point of Curve objects is not displayed correctly #64829

Closed
opened 2019-05-19 08:39:22 +02:00 by Yevgeny Makarov · 20 comments

System Information
Operating system: Darwin-18.2.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 455 OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.4.10

Blender Version
Broken: version: 2.80 (sub 69), branch: blender2.7, commit date: 2019-05-18 17:13, hash: 1fce0460d5

Short description of error
The active point of the Curve/Surface objects is not displayed correctly (not highlighted in white) after you change it.

Exact steps for others to reproduce the error

  • Create Curve or Surface object
  • In Edit Mode select some points, the active point is not displayed in white
**System Information** Operating system: Darwin-18.2.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 455 OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.4.10 **Blender Version** Broken: version: 2.80 (sub 69), branch: blender2.7, commit date: 2019-05-18 17:13, hash: `1fce0460d5` **Short description of error** The active point of the Curve/Surface objects is not displayed correctly (not highlighted in white) after you change it. **Exact steps for others to reproduce the error** - Create Curve or Surface object - In Edit Mode select some points, the active point is not displayed in white
Author
Member

Added subscriber: @jenkm

Added subscriber: @jenkm
Member

Added subscriber: @nacioss

Added subscriber: @nacioss
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Marco closed this issue 2019-05-19 16:43:40 +02:00
Marco self-assigned this 2019-05-19 16:43:40 +02:00
Member

It is displayed in green as it should be. They changed the color of active verts to be green.
Screenshot.jpg

It is displayed in green as it should be. They changed the color of active verts to be green. ![Screenshot.jpg](https://archive.blender.org/developer/F7048147/Screenshot.jpg)
Author
Member

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Author
Member

@nacioss green it's just selected points, active one is white

@nacioss green it's just selected points, active one is white
Marco was unassigned by Philipp Oeser 2019-05-20 14:14:35 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

note: seems to update (to white) if you actually move the active point...

note: seems to update (to white) if you actually move the active point...
Member

In #64829#683257, @lichtwerk wrote:
note: seems to update (to white) if you actually move the active point...

...but not if you use the select tools [box, lasso, ...] ...

> In #64829#683257, @lichtwerk wrote: > note: seems to update (to white) if you actually move the active point... ...but not if you use the select tools [box, lasso, ...] ...
Campbell Barton was assigned by Philipp Oeser 2019-05-20 16:08:25 +02:00
Member

Added subscribers: @fclem, @ideasman42

Added subscribers: @fclem, @ideasman42
Member

I followed this a bit, so DEG seems to be tagging correctly ID_RECALC_SELECT, BKE_curve_batch_cache_dirty_tag gets called...

Maybe @fclem or @ideasman42 (campbell: will assign to you first if OK?) know what's going on?

I followed this a bit, so DEG seems to be tagging correctly `ID_RECALC_SELECT`, `BKE_curve_batch_cache_dirty_tag` gets called... Maybe @fclem or @ideasman42 (campbell: will assign to you first if OK?) know what's going on?
Member

Added subscribers: @Sergey, @JacquesLucke

Added subscribers: @Sergey, @JacquesLucke
Member

@Sergey, the issues seems to be that when tagging the curve with ID_RECALC_SELECT, cu->actvert is not copied to the curve-copy in the depsgraph. Is there a place where this just has to be added?

@Sergey, the issues seems to be that when tagging the curve with `ID_RECALC_SELECT`, `cu->actvert` is not copied to the curve-copy in the depsgraph. Is there a place where this just has to be added?

@JacquesLucke, BKE_curve_copy_data() would be my first guess.

@JacquesLucke, `BKE_curve_copy_data()` would be my first guess.
Member

Thanks. Unfortunately, BKE_curve_copy_data is not called when ID_RECALC_SELECT is used in ED_curve_editnurb_select_pick. However, it is called when ID_RECALC_ALL is used.

Thanks. Unfortunately, `BKE_curve_copy_data` is not called when `ID_RECALC_SELECT` is used in `ED_curve_editnurb_select_pick`. However, it is called when `ID_RECALC_ALL` is used.

Short answer: use ID_RECALC_COPY_ON_WRITE | ID_RECALC_SELECT.

Long answer: due to some historical reasons batch cache component (where selection is living) is not making CoW component to be run (was a measure to speed up updates on materials). Using explicit tag should solve this. And then in the future we can have a more closer look and hide CoW specifics from the "user space".

Short answer: use `ID_RECALC_COPY_ON_WRITE | ID_RECALC_SELECT`. Long answer: due to some historical reasons batch cache component (where selection is living) is not making CoW component to be run (was a measure to speed up updates on materials). Using explicit tag should solve this. And then in the future we can have a more closer look and hide CoW specifics from the "user space".
Member

Can confirm ID_RECALC_COPY_ON_WRITE | ID_RECALC_SELECT works.
There is still an issue when the curve has multiple nurbs [highlighting only works in the very first], as well as the issue with the other selection tools [box, lasso, ...].
Will check on these...

Can confirm `ID_RECALC_COPY_ON_WRITE | ID_RECALC_SELECT` works. There is still an issue when the curve has multiple nurbs [highlighting only works in the very first], as well as the issue with the other selection tools [box, lasso, ...]. Will check on these...
Campbell Barton was unassigned by Philipp Oeser 2019-05-24 12:08:59 +02:00
Philipp Oeser self-assigned this 2019-05-24 12:08:59 +02:00

This issue was referenced by 24b2fe50f3

This issue was referenced by 24b2fe50f3ec13ac538a0fb504d53016331b17bb
Member

@lichtwerk, then please also commit the fix mentioned by sergey.

@lichtwerk, then please also commit the fix mentioned by sergey.
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64829
No description provided.